Fix bug of too much left padding in post_comments page

--- a/client/activities/activity_card.css
+++ b/client/activities/activity_card.css
@@ -243,7 +243,7 @@ ul, menu, dir {
     -webkit-margin-after: 1em;
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
-    -webkit-padding-start: 40px;
+    /*-webkit-padding-start: 40px;*/
 }
 .sActList li {
     padding: 0;
